[project]
name = "tidy-tuesdays"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.0",
    "loguru>=0.7.3",
    "pydytuesday>=0.0.4",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "notebook>=7.3.2",
    "pytest>=8.3.4",
]
